--- a/www/templates/customer/profile.html
+++ b/www/templates/customer/profile.html
@@ -17,10 +17,10 @@
                 <input type="text" placeholder="Last Name" ng-model="data.last_name"/>
             </label>
             <label class="item item-input">
-                <input type="text" placeholder="Email" ng-model="data.email" readonly="readonly"/>
+                <input type="email" placeholder="Email" ng-model="data.email" readonly="readonly"/>
             </label>
             <label class="item item-input">
-                <input type="text" placeholder="Mobile Phone" ng-model="data.mobile"/>
+                <input type="tel" placeholder="Mobile Phone" ng-model="data.mobile"/>
             </label>
             <label class="item item-input">
                 <input type="text" placeholder="Address" ng-model="data.address"/>
