--- a/www/templates/customer/profile.html
+++ b/www/templates/customer/profile.html
@@ -7,26 +7,33 @@
             {{ flashMessage.message }}
         </div>
         <form>
-            <label class="item item-input">
-                <input type="text" placeholder="Username" ng-model="data.username" readonly="readonly"/>
+            <label class=" item item-input item-stacked-label">
+                <span class="input-label"></span>
+                <input type="text" placeholder="Username" ng-model="formData.username" readonly="readonly"/>
             </label>
-            <label class="item item-input">
-                <input type="text" placeholder="First Name" ng-model="data.first_name"/>
+            <label class=" item item-input item-stacked-label">
+                <span class="input-label">First Name</span>
+                <input type="text" placeholder="First Name" ng-model="formformData.first_name"/>
             </label>
-            <label class="item item-input">
-                <input type="text" placeholder="Last Name" ng-model="data.last_name"/>
+            <label class=" item item-input item-stacked-label">
+                <span class="input-label">Last Name</span>
+                <input type="text" placeholder="Last Name" ng-model="formData.last_name"/>
             </label>
-            <label class="item item-input">
-                <input type="email" placeholder="Email" ng-model="data.email" readonly="readonly"/>
+            <label class=" item item-input item-stacked-label">
+                <span class="input-label">Email address</span>
+                <input type="email" placeholder="Type your Email address" ng-model="formData.email" readonly="readonly"/>
             </label>
-            <label class="item item-input">
-                <input type="tel" placeholder="Mobile Phone" ng-model="data.mobile"/>
+            <label class=" item item-input item-stacked-label">
+                <span class="input-label">Mobile number</span>
+                <input type="tel" placeholder="Mobile number" ng-model="formData.mobile"/>
             </label>
-            <label class="item item-input">
-                <input type="text" placeholder="Address" ng-model="data.address"/>
+            <label class=" item item-input item-stacked-label">
+                <span class="input-label">Address</span>
+                <input type="text" placeholder="Address" ng-model="formData.address"/>
             </label>
-            <label class="item item-input">
-                <input type="text" placeholder="Zipcode" ng-model="data.zipcode"/>
+            <label class=" item item-input item-stacked-label">
+                <span class="input-label">Zipcode</span>
+                <input type="text" placeholder="Zipcode" ng-model="formData.zipcode"/>
             </label>
             <br/>
             <div class="button-bar">
