--- a/www/templates/partial/offer-tmp.html
+++ b/www/templates/partial/offer-tmp.html
@@ -5,32 +5,38 @@
     <ion-content class="padding">
         <form>
             <div class="list list-inset">
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">Subject</span>
                     <input type="text" placeholder="Type subject here" ng-model="offerData.subject" autofocus=""/>
                 </label>
             </div>
             <div class="list list-inset">
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">Begin</span>
                     <input type="date" placeholder="Start date" ng-model="offerData.start_time"/>
                 </label>
             </div>
             <div class="list list-inset">
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">End</span>
                     <input type="date" placeholder="End date" ng-model="offerData.end_time"/>
                 </label>
             </div>
             <div class="list list-inset">
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">Discount</span>
                     <input type="number" placeholder="Type here value off" ng-model="offerData.off"/>
                 </label>
             </div>
             <div class="list list-inset">
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">Max value</span>
                     <input type="number" placeholder="Type here max value" ng-model="offerData.off_max"/>
                 </label>
             </div>
             <div class="list list-inset">
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">Type</span>
                     <select class="form-control" ng-model="offerData.off_type">
                         <option value="%">%</option>
                         <option value="$">$</option>
@@ -38,18 +44,25 @@
                 </label>
             </div>
             <div class="list list-inset">
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">Content</span>
                     <textarea type="text" placeholder="Type here your content" rows="8" cols="40" ng-model="offerData.content"></textarea>
                 </label>
             </div>
             <div class="list list-inset">
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
+                    <span class="input-label">Photo url</span>
+                    <input type="number" placeholder="Paste/Type file url" ng-model="offerData.file_url"/>
+                </label>
+            </div>
+            <!--div class="list list-inset">
+                <label class="item item-input item-stacked-label">
                     <input type="file" name="filename" value="" file-upload/>
                 </label>
                 <ul>
                     <li ng-repeat="file in files">{{file.name}}</li>
                 </ul>
-            </div>
+            </div-->
             <div class="button-bar">
                 <button class="button" ng-click="closeModal()">Cancel</button>
                 <button class="button" ng-click="saveOffer()">Save</button>
